<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="name">Name</string>
    <string name="paid">Paid</string>
    <string name="bought">Bought</string>
    <string name="save">Save</string>
    <string name="add_payer">Add Payer</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="calculate_expenses">Calculate expenses</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="calculate">Calculate</string>
    <string name="balance_not_yet_calculated">Balance: Not yet calculated</string>
</resources>